[gd_scene load_steps=7 format=2]

[ext_resource path="res://Resources/Theme.tres" type="Theme" id=1]
[ext_resource path="res://Resources/8-bit Arcade In.ttf" type="DynamicFontData" id=2]
[ext_resource path="res://GUI/DifficultyMenu.gd" type="Script" id=3]
[ext_resource path="res://Art/background.png" type="Texture" id=4]
[ext_resource path="res://Sound/StrangeForests.mp3" type="AudioStream" id=5]

[sub_resource type="DynamicFont" id=1]
size = 32
font_data = ExtResource( 2 )

[node name="DifficultyMenu" type="Control"]
anchor_right = 1.0
anchor_bottom = 1.0
theme = ExtResource( 1 )
script = ExtResource( 3 )

[node name="TextureRect" type="TextureRect" parent="."]
anchor_right = 1.0
anchor_bottom = 1.0
texture = ExtResource( 4 )

[node name="ColorRect" type="ColorRect" parent="."]
anchor_right = 1.0
anchor_bottom = 1.0
color = Color( 0.286275, 0.286275, 0.286275, 0.580392 )

[node name="Label" type="Label" parent="."]
anchor_right = 1.0
margin_top = 15.0
margin_bottom = 37.0
custom_fonts/font = SubResource( 1 )
text = "Difficulty"
align = 1
valign = 1

[node name="MainMenu" type="VBoxContainer" parent="."]
margin_left = 31.0
margin_top = 71.0
margin_right = 71.0
margin_bottom = 130.0

[node name="EasyBtn" type="Button" parent="MainMenu"]
margin_right = 60.0
margin_bottom = 17.0
text = "Easy"

[node name="NormalBtn" type="Button" parent="MainMenu"]
margin_top = 21.0
margin_right = 60.0
margin_bottom = 38.0
text = "normal"

[node name="HardBtn" type="Button" parent="MainMenu"]
margin_top = 42.0
margin_right = 60.0
margin_bottom = 59.0
text = "hard"

[node name="ReturnBtn" type="Button" parent="."]
margin_left = 245.0
margin_top = 147.0
margin_right = 305.0
margin_bottom = 164.0
text = "return"

[node name="AnimationPlayer" type="AnimationPlayer" parent="."]

[node name="Music" type="AudioStreamPlayer" parent="."]
stream = ExtResource( 5 )
autoplay = true

[connection signal="pressed" from="MainMenu/EasyBtn" to="." method="_on_EasyBtn_pressed"]
[connection signal="pressed" from="MainMenu/NormalBtn" to="." method="_on_NormalBtn_pressed"]
[connection signal="pressed" from="MainMenu/HardBtn" to="." method="_on_HardBtn_pressed"]
[connection signal="pressed" from="ReturnBtn" to="." method="_on_ReturnBtn_pressed"]
